Added proxy info for building